# chatapp-graphql

./: .gitignore  pyproject.toml
src/: main.py  schema.graphql
src/controllers/: message.py  room.py  user.py
src/helpers/: auth.py  middleware.py
src/migrations/versions/: 1b7431d129dc_initial_migration.py  56571843944b_increase_user_password_length.py  acd0822b2e42_update_user_password_length.py  ed41d09d9a59_update_user.py  fba5882d391c_update_user_password.py
src/models/: message.py  room.py  user.py  user_room.py
